--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<meta charset="utf-8">
 	<title>My Octopress Blog</title>
 	<meta name="author" content="Nate">
-
+    <meta name="baidu-site-verification" content="8lpZUJygv3" />
 	
 	<meta name="description" content="| Comments 架构之路 分类命名规范 | Comments Const Study ios 全部小写 ios|a 首字母大写 ios|a|a 首字母小写 ios|a|a|a 全部大写 iOS开发 | Comments Push Pop 手势过渡动画 原料 &hellip;">
 	
